[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "vroom-csv"
dynamic = ["version"]
description = "High-performance CSV parser with SIMD acceleration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Jim Hester", email = "james.f.hester@gmail.com"}
]
keywords = ["csv", "parser", "simd", "arrow", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0", "pyarrow>=14.0"]
arrow = ["pyarrow>=14.0"]
polars = ["polars>=0.20"]
benchmark = ["pandas>=2.0", "polars>=0.20", "pyarrow>=14.0", "duckdb>=0.9"]
dev = ["pytest>=7.0", "pyarrow>=14.0", "polars>=0.20", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/jimhester/libvroom"
Repository = "https://github.com/jimhester/libvroom"
Documentation = "https://github.com/jimhester/libvroom"
Issues = "https://github.com/jimhester/libvroom/issues"

[tool.scikit-build]
cmake.build-type = "Release"
build.verbose = false
wheel.packages = ["src/vroom_csv"]
build-dir = "build/{wheel_tag}"
install.components = ["python"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/vroom_csv/_version.py"]

[tool.scikit-build.cmake.define]
BUILD_TESTING = "OFF"
BUILD_BENCHMARKS = "OFF"

[tool.setuptools_scm]
root = ".."
write_to = "python/src/vroom_csv/_version.py"
# PyPI/TestPyPI reject local version identifiers (e.g., +g252d43bb0)
# Using no-local-version produces versions like 0.1.dev1 instead of 0.1.dev1+g252d43bb0
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
